sticky-footer-navbar.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #e9e9e9;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

.inlineDetails {
  float: left;
  width: 50%;
  margin-right: 20px;
}

.inlineCarousel {
  float: left;
  width: 45%;
}

body > .container {
  padding: 0 15px 0;
}

.container .text-muted {
  margin: 20px 0;
}

.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
}

code {
  font-size: 80%;
}

